修改z-index bug

--- a/src/assets/stylesheets/vars.scss
+++ b/src/assets/stylesheets/vars.scss
@@ -51,4 +51,5 @@
     --welcome-text: white;
     --z-index-bottom-nav: 8;
     --z-index-overlay: 16;
+    --z-index-navbar: 32;
 }
